--- a/index.html
+++ b/index.html
@@ -14,18 +14,16 @@
 <body onload="document.body.style.opacity='1'">
     <div class="container">
         <header>
-            <div class="row">
-                <div class="col-md-12">
-                    <figure>
-                        <img src="2018-02-23 07.43.42-2.jpg" alt="harbour view" class = header>
-                    </figure>
-                </div>
-            </div>
             <div class = "row">
-                <div class = "col-md-4">
+                <div class = "col-md-3">
                 <h1>Rebecca Schrader</h1>
                 </div>
-                <div class="col-md-8">
+                <div class = "col-md-3">
+                <figure>
+                    <img src="248A7056.jpg">
+                </figure>
+                </div>
+                <div class="col-md-6"><br />
                 <p>Creatively minded full stack and multimedia developer. Dual Citizen: British/American</p>
                 </div>
             </div>
@@ -33,32 +31,33 @@
         <hr>
         <div class = "row">
             <div class= "col-sm-4">
-            <a href="#"><i style="font-size:100px" class="fa fa-mouse-pointer"></i></a>
+            <a href="websites.html"><i style="font-size:75px" class="fa fa-mouse-pointer"></i></a>
             <h3>Websites</h3>
             </div>
             <div class= "col-sm-4">
-            <a href="#"><i style="font-size:100px" class="fa fa-film"></i></a>
+            <a href="#"><i style="font-size:75px" class="fa fa-film"></i></a>
             <h3>Videos</h3>
             </div>
             <div class= "col-sm-4">
-            <a href="#"><i style="font-size:100px" class="fa fa-user"></i></a>
+            <a href="#"><i style="font-size:75px" class="fa fa-user"></i></a>
             <h3>Personal</h3>
             </div>
         </div>
          <div class = "row">
             <div class= "col-sm-4">
-            <a href="#"><i style="font-size:100px" class="fa fa-wrench"></i></a>
+            <a href="#"><i style="font-size:75px" class="fa fa-wrench"></i></a>
             <h3>Skills</h3>
             </div>
             <div class= "col-sm-4">
-            <a href="Rebecca Schrader Resume.pdf" download><i style="font-size:100px" class="fa fa-download"></i></a>
+            <a href="Rebecca Schrader Resume.pdf" download><i style="font-size:75px" class="fa fa-download"></i></a>
             <h3>Resume</h3>
             </div>
             <div class= "col-sm-4">
-            <a href="#"><i style="font-size:100px" class="fa fa-phone"></i></a>
+            <a href="#"><i style="font-size:75px" class="fa fa-phone"></i></a>
             <h3>Contact</h3>
             </div>
         </div>
     </div>
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 </body>
 </html>
