Index/Navbar Changes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Rebecca Schrader</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="Profile Site home.css" type="text/css" />
+    <link rel="stylesheet" href="home.css" type="text/css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -14,17 +14,23 @@
 <body onload="document.body.style.opacity='1'">
     <div class="container">
         <header>
+           <br />
             <div class = "row">
-                <div class = "col-md-3">
+                <div class = "col-md-8">
                 <h1>Rebecca Schrader</h1>
                 </div>
-                <div class = "col-md-3">
+                <div class = "col-md-4">
                 <figure>
                     <img src="248A7056.jpg">
                 </figure>
                 </div>
-                <div class="col-md-6"><br />
-                <p>Creatively minded full stack and multimedia developer. Dual Citizen: British/American</p>
+            </div>
+            <div class = "row">
+                <div class = "col-md-2">
+                    
+                </div>   
+                <div class="col-md-8">
+                <p>Creatively minded full stack and multimedia developer. <br />Dual Citizen: British/American</p>
                 </div>
             </div>
         </header>
