--- a/websites.html
+++ b/websites.html
@@ -12,22 +12,18 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-inverse">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myMenu">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                </div>
-                <ul id="myMenu" class="nav navbar-right collapse navbar-collapse nav-pills nav-justified">
-                    <li><a href="index.html"><i style="font-size:35px" class="fa fa-home"><br />Home</i></a></li>
-                    <li><a href="#"><i style="font-size:35px" class="fa fa-mouse-pointer"><br />Websites</i></a></li>
-                    <li><a href="#"><i style="font-size:35px" class="fa fa-film"><br />Videos</i></a></li>
-                    <li><a href="#"><i style="font-size:35px" class="fa fa-user"><br />Personal</i></a></li>
-                    <li><a href="#"><i style="font-size:35px" class="fa fa-wrench"><br />Skills</i></a></li>
-                    <li><a href="#"><i style="font-size:35px" class="fa fa-phone"><br />Contact</i></a></li>
+    <nav>
+        <div class="navbar navbar-inverse navbar-fixed-left">
+            <a><figure><img src="248A7056.jpg"></figure></a>
+                <ul class="nav navbar-nav">
+                    <li><a href="index.html"><i style="font-size:35px" class="fa fa-home"><br /></i></a></li>
+                    <li><a href="#"><i style="font-size:35px" class="fa fa-mouse-pointer"><br /></i></a></li>
+                    <li><a href="#"><i style="font-size:35px" class="fa fa-film"><br /></i></a></li>
+                    <li><a href="#"><i style="font-size:35px" class="fa fa-user"><br /></i></a></li>
+                    <li><a href="#"><i style="font-size:35px" class="fa fa-wrench"><br /></i></a></li>
+                    <li><a href="#"><i style="font-size:35px" class="fa fa-phone"><br /></i></a></li>
                 </ul>
-            </nav> 
+        </div>
+    </nav>
 </body>
 </html>
