--- a/websites.html
+++ b/websites.html
@@ -12,18 +12,75 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <nav>
-        <div class="navbar navbar-inverse navbar-fixed-left">
-            <a><figure><img src="248A7056.jpg"></figure></a>
-                <ul class="nav navbar-nav">
-                    <li><a href="index.html"><i style="font-size:35px" class="fa fa-home"><br /></i></a></li>
-                    <li><a href="#"><i style="font-size:35px" class="fa fa-mouse-pointer"><br /></i></a></li>
-                    <li><a href="#"><i style="font-size:35px" class="fa fa-film"><br /></i></a></li>
-                    <li><a href="#"><i style="font-size:35px" class="fa fa-user"><br /></i></a></li>
-                    <li><a href="#"><i style="font-size:35px" class="fa fa-wrench"><br /></i></a></li>
-                    <li><a href="#"><i style="font-size:35px" class="fa fa-phone"><br /></i></a></li>
-                </ul>
+  <nav class="navbar navbar-inverse">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myMenu">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
         </div>
+        <ul id="myMenu" class="nav navbar-right collapse navbar-collapse nav-pills nav-justified">
+            <li><a href="index.html"><i style="font-size:35px" class="fa fa-home"><br /></i></a></li>
+            <li><a href="#"><i style="font-size:35px" class="fa fa-mouse-pointer"><br /></i></a></li>
+            <li><a href="#"><i style="font-size:35px" class="fa fa-film"><br /></i></a></li>
+            <li><a href="#"><i style="font-size:35px" class="fa fa-user"><br /></i></a></li>
+            <li><a href="#"><i style="font-size:35px" class="fa fa-wrench"><br /></i></a></li>
+            <li><a href="#"><i style="font-size:35px" class="fa fa-phone"><br /></i></a></li>
+        </ul>
     </nav>
+    <div class="container">
+        <section>
+            <div class = "row">
+                <div class = "col-sm-12">
+                    <h1> Front End Development: Gabriel Knight Fan Site</h1>
+                    <h3 class="languages">CSS | HTML | JS | Bootstrap | JQuery | FontAwesome | GitHub</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-3 col-sm-offset-4">
+                    <a href="https://github.com/RMSchrader1994/Stream1_Porject" target="_blank"><img src="GitHub-Mark-Light-120px-plus.png" alt="GitHub"></a>
+                    </div>
+                    <div class="col-sm-3">
+                    <a href="https://rmschrader1994.github.io/Stream1_Porject/" target="_blank"><img src="GK.jpg" alt="Talisman">
+                    </a>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class = "row">
+                <div class = "col-sm-12">
+                    <h1> Back End Development: Dragon Age Inquisition Quests</h1>
+                    <h3 class="languages">CSS | HTML | JS | Bootstrap | JQuery | Python | D3/DC | GitHub</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-3 col-sm-offset-4">
+                    <a href="https://github.com/RMSchrader1994/project2" target="_blank"><img src="GitHub-Mark-Light-120px-plus.png" alt="GitHub"></a>
+                    </div>
+                    <div class="col-sm-3">
+                    <a href="https://dragonagequests.herokuapp.com/" target="_blank"><img src="DAI.png" alt="Inquisition">
+                    </a>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class = "row">
+                <div class = "col-sm-12">
+                    <h1> Full Stack Development: Elder Scrolls Online Fan Site</h1>
+                    <h3 class="languages">CSS | HTML | JS | Bootstrap | JQuery | Python | Django | GitHub</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-3 col-sm-offset-4">
+                    <a href="https://github.com/RMSchrader1994/project3" target="_blank"><img src="GitHub-Mark-Light-120px-plus.png" alt="GitHub"></a>
+                    </div>
+                    <div class="col-sm-3">
+                    <a href="https://becca-elderscrollsonline.herokuapp.com/" target="_blank"><img src="elder-scrolls-online_logo.jpg" alt="ESO">
+                    </a>
+                </div>
+            </div>
+        </section>
+    </div> 
 </body>
 </html>
