Personal Page Begun

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h3>Videos</h3>
             </div>
             <div class= "col-sm-4">
-            <a href="#"><i style="font-size:75px" class="fa fa-user"></i></a>
+            <a href="personal.html"><i style="font-size:75px" class="fa fa-user"></i></a>
             <h3>Personal</h3>
             </div>
         </div>
