--- a/websites.html
+++ b/websites.html
@@ -22,9 +22,9 @@
         </div>
         <ul id="myMenu" class="nav navbar-right collapse navbar-collapse nav-pills nav-justified">
             <li><a href="index.html"><i style="font-size:35px" class="fa fa-home"><br /></i></a></li>
-            <li><a href="#"><i style="font-size:35px" class="fa fa-mouse-pointer"><br /></i></a></li>
+            <li><a href="websites.html"><i style="font-size:35px" class="fa fa-mouse-pointer"><br /></i></a></li>
             <li><a href="#"><i style="font-size:35px" class="fa fa-film"><br /></i></a></li>
-            <li><a href="#"><i style="font-size:35px" class="fa fa-user"><br /></i></a></li>
+            <li><a href="personal.html"><i style="font-size:35px" class="fa fa-user"><br /></i></a></li>
             <li><a href="#"><i style="font-size:35px" class="fa fa-wrench"><br /></i></a></li>
             <li><a href="#"><i style="font-size:35px" class="fa fa-phone"><br /></i></a></li>
         </ul>
