--- a/personal.html
+++ b/personal.html
@@ -5,10 +5,30 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Personal</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="personal.css" type="text/css" />
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-
+    <nav class="navbar navbar-inverse">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myMenu">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </div>
+        <ul id="myMenu" class="nav navbar-right collapse navbar-collapse nav-pills nav-justified">
+            <li><a href="index.html"><i style="font-size:35px" class="fa fa-home"><br /></i></a></li>
+            <li><a href="websites.html"><i style="font-size:35px" class="fa fa-mouse-pointer"><br /></i></a></li>
+            <li><a href="#"><i style="font-size:35px" class="fa fa-film"><br /></i></a></li>
+            <li><a href="personal.html"><i style="font-size:35px" class="fa fa-user"><br /></i></a></li>
+            <li><a href="#"><i style="font-size:35px" class="fa fa-wrench"><br /></i></a></li>
+            <li><a href="#"><i style="font-size:35px" class="fa fa-phone"><br /></i></a></li>
+        </ul>
+    </nav>
 <section class="timeline">
   <ul>
     <li>
@@ -68,6 +88,6 @@
     </li>
   </ul>
 </section>
-<script src="videos.js"></script>
+<script src="personal.js"></script>
 </body>
 </html>
