--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
          <div class = "row">
             <div class= "col-sm-4">
-            <a href="#"><i style="font-size:75px" class="fa fa-wrench"></i></a>
+            <a href="skills.html"><i style="font-size:75px" class="fa fa-wrench"></i></a>
             <h3>Skills</h3>
             </div>
             <div class= "col-sm-4">
@@ -59,7 +59,7 @@
             <h3>Resume</h3>
             </div>
             <div class= "col-sm-4">
-            <a href="#"><i style="font-size:75px" class="fa fa-phone"></i></a>
+            <a href="contact.html"><i style="font-size:75px" class="fa fa-phone"></i></a>
             <h3>Contact</h3>
             </div>
         </div>
