--- a/personal.html
+++ b/personal.html
@@ -25,8 +25,8 @@
             <li><a href="websites.html"><i style="font-size:35px" class="fa fa-mouse-pointer"><br /></i></a></li>
             <li><a href="#"><i style="font-size:35px" class="fa fa-film"><br /></i></a></li>
             <li><a href="personal.html"><i style="font-size:35px" class="fa fa-user"><br /></i></a></li>
-            <li><a href="#"><i style="font-size:35px" class="fa fa-wrench"><br /></i></a></li>
-            <li><a href="#"><i style="font-size:35px" class="fa fa-phone"><br /></i></a></li>
+            <li><a href="skills.html"><i style="font-size:35px" class="fa fa-wrench"><br /></i></a></li>
+            <li><a href="contact.html"><i style="font-size:35px" class="fa fa-phone"><br /></i></a></li>
         </ul>
     </nav>
 <section class="timeline">
