Folders For Github

--- a/HTML/personal.html
+++ b/HTML/personal.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Personal</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="personal.css" type="text/css" />
+        <link rel="stylesheet" href="../CSS/personal.css" type="text/css" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -21,12 +21,12 @@
             </button>
         </div>
         <ul id="myMenu" class="nav navbar-right collapse navbar-collapse nav-pills nav-justified">
-            <li><a href="index.html"><i style="font-size:35px" class="fa fa-home"><br /></i></a></li>
-            <li><a href="websites.html"><i style="font-size:35px" class="fa fa-mouse-pointer"><br /></i></a></li>
+            <li><a href="../index.html"><i style="font-size:35px" class="fa fa-home"><br /></i></a></li>
+            <li><a href="../HTML/websites.html"><i style="font-size:35px" class="fa fa-mouse-pointer"><br /></i></a></li>
             <li><a href="#"><i style="font-size:35px" class="fa fa-film"><br /></i></a></li>
-            <li><a href="personal.html"><i style="font-size:35px" class="fa fa-user"><br /></i></a></li>
-            <li><a href="skills.html"><i style="font-size:35px" class="fa fa-wrench"><br /></i></a></li>
-            <li><a href="contact.html"><i style="font-size:35px" class="fa fa-phone"><br /></i></a></li>
+            <li><a href="../HTML/personal.html"><i style="font-size:35px" class="fa fa-user"><br /></i></a></li>
+            <li><a href="../HTML/skills.html"><i style="font-size:35px" class="fa fa-wrench"><br /></i></a></li>
+            <li><a href="../HTML/contact.html"><i style="font-size:35px" class="fa fa-phone"><br /></i></a></li>
         </ul>
     </nav>
 <section class="timeline">
@@ -88,6 +88,6 @@
     </li>
   </ul>
 </section>
-<script src="personal.js"></script>
+<script src="../JS/personal.js"></script>
 </body>
 </html>
