--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Rebecca Schrader</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="home.css" type="text/css" />
+    <link rel="stylesheet" href="CSS/home.css" type="text/css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -21,7 +21,7 @@
                 </div>
                 <div class = "col-md-4">
                 <figure>
-                    <img src="248A7056.jpg">
+                    <img src="Media/IMG/248A7056.jpg">
                 </figure>
                 </div>
             </div>
@@ -37,7 +37,7 @@
         <hr>
         <div class = "row">
             <div class= "col-sm-4">
-            <a href="websites.html"><i style="font-size:75px" class="fa fa-mouse-pointer"></i></a>
+            <a href="HTML/websites.html"><i style="font-size:75px" class="fa fa-mouse-pointer"></i></a>
             <h3>Websites</h3>
             </div>
             <div class= "col-sm-4">
@@ -45,25 +45,24 @@
             <h3>Videos</h3>
             </div>
             <div class= "col-sm-4">
-            <a href="personal.html"><i style="font-size:75px" class="fa fa-user"></i></a>
+            <a href="HTML/personal.html"><i style="font-size:75px" class="fa fa-user"></i></a>
             <h3>Personal</h3>
             </div>
         </div>
          <div class = "row">
             <div class= "col-sm-4">
-            <a href="skills.html"><i style="font-size:75px" class="fa fa-wrench"></i></a>
+            <a href="HTML/skills.html"><i style="font-size:75px" class="fa fa-wrench"></i></a>
             <h3>Skills</h3>
             </div>
             <div class= "col-sm-4">
-            <a href="Rebecca Schrader Resume.pdf" download><i style="font-size:75px" class="fa fa-download"></i></a>
+            <a href="Media/Files/Rebecca Schrader Resume.pdf" download><i style="font-size:75px" class="fa fa-download"></i></a>
             <h3>Resume</h3>
             </div>
             <div class= "col-sm-4">
-            <a href="contact.html"><i style="font-size:75px" class="fa fa-phone"></i></a>
+            <a href="HTML/contact.html"><i style="font-size:75px" class="fa fa-phone"></i></a>
             <h3>Contact</h3>
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 </body>
 </html>
