--- a/HTML/websites.html
+++ b/HTML/websites.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Websites</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="websites.css" type="text/css" />
+        <link rel="stylesheet" href="../CSS/websites.css" type="text/css" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -21,12 +21,12 @@
             </button>
         </div>
         <ul id="myMenu" class="nav navbar-right collapse navbar-collapse nav-pills nav-justified">
-            <li><a href="index.html"><i style="font-size:35px" class="fa fa-home"><br /></i></a></li>
-            <li><a href="websites.html"><i style="font-size:35px" class="fa fa-mouse-pointer"><br /></i></a></li>
+            <li><a href="../index.html"><i style="font-size:35px" class="fa fa-home"><br /></i></a></li>
+            <li><a href="../HTML/websites.html"><i style="font-size:35px" class="fa fa-mouse-pointer"><br /></i></a></li>
             <li><a href="#"><i style="font-size:35px" class="fa fa-film"><br /></i></a></li>
-            <li><a href="personal.html"><i style="font-size:35px" class="fa fa-user"><br /></i></a></li>
-            <li><a href="skills.html"><i style="font-size:35px" class="fa fa-wrench"><br /></i></a></li>
-            <li><a href="contact.html"><i style="font-size:35px" class="fa fa-phone"><br /></i></a></li>
+            <li><a href="../HTML/personal.html"><i style="font-size:35px" class="fa fa-user"><br /></i></a></li>
+            <li><a href="../HTML/skills.html"><i style="font-size:35px" class="fa fa-wrench"><br /></i></a></li>
+            <li><a href="../HTML/contact.html"><i style="font-size:35px" class="fa fa-phone"><br /></i></a></li>
         </ul>
     </nav>
     <div class="container">
@@ -39,10 +39,10 @@
             </div>
             <div class="row">
                 <div class="col-sm-3 col-sm-offset-4">
-                    <a href="https://github.com/RMSchrader1994/Stream1_Porject" target="_blank"><img src="GitHub-Mark-Light-120px-plus.png" alt="GitHub"></a>
+                    <a href="https://github.com/RMSchrader1994/Stream1_Porject" target="_blank"><img src="../Media/IMG/GitHub-Mark-Light-120px-plus.png" alt="GitHub"></a>
                     </div>
                     <div class="col-sm-3">
-                    <a href="https://rmschrader1994.github.io/Stream1_Porject/" target="_blank"><img src="GK.jpg" alt="Talisman">
+                    <a href="https://rmschrader1994.github.io/Stream1_Porject/" target="_blank"><img src="../Media/IMG/GK.jpg" alt="Talisman">
                     </a>
                 </div>
             </div>
@@ -56,10 +56,10 @@
             </div>
             <div class="row">
                 <div class="col-sm-3 col-sm-offset-4">
-                    <a href="https://github.com/RMSchrader1994/project2" target="_blank"><img src="GitHub-Mark-Light-120px-plus.png" alt="GitHub"></a>
+                    <a href="https://github.com/RMSchrader1994/project2" target="_blank"><img src="../Media/IMG/GitHub-Mark-Light-120px-plus.png" alt="GitHub"></a>
                     </div>
                     <div class="col-sm-3">
-                    <a href="https://dragonagequests.herokuapp.com/" target="_blank"><img src="DAI.png" alt="Inquisition">
+                    <a href="https://dragonagequests.herokuapp.com/" target="_blank"><img src="../Media/IMG/DAI.png" alt="Inquisition">
                     </a>
                 </div>
             </div>
@@ -73,10 +73,10 @@
             </div>
             <div class="row">
                 <div class="col-sm-3 col-sm-offset-4">
-                    <a href="https://github.com/RMSchrader1994/project3" target="_blank"><img src="GitHub-Mark-Light-120px-plus.png" alt="GitHub"></a>
+                    <a href="https://github.com/RMSchrader1994/project3" target="_blank"><img src="../Media/IMG/GitHub-Mark-Light-120px-plus.png" alt="GitHub"></a>
                     </div>
                     <div class="col-sm-3">
-                    <a href="https://becca-elderscrollsonline.herokuapp.com/" target="_blank"><img src="elder-scrolls-online_logo.jpg" alt="ESO">
+                    <a href="https://becca-elderscrollsonline.herokuapp.com/" target="_blank"><img src="../Media/IMG/elder-scrolls-online_logo.jpg" alt="ESO">
                     </a>
                 </div>
             </div>
