Video Page Created

--- a/HTML/videos.html
+++ b/HTML/videos.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Contact Info</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="../CSS/contact.css" type="text/css" />
+        <link rel="stylesheet" href="../CSS/videos.css" type="text/css" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -29,28 +29,5 @@
             <li><a href="../HTML/contact.html"><i style="font-size:35px" class="fa fa-phone"><br /></i></a></li>
         </ul>
     </nav>
-    <div class="container">
-        <div class="col-md-5">
-            <h1>Contact Info</h1>
-            <hr>
-            <h3><strong>Name:</strong> Rebecca Schrader</h3>
-            <br />
-            <h3><strong>Email:</strong> RMSchrader1994@gmail.com</h3>
-            <br />
-            <h3><strong>Mobile:</strong> 0838722970</h3>
-            <br />
-        </div>
-        <div class="col-md-2"></div>
-        <div class="col-md-5">
-            <h1>Social Media</h1>
-            <hr>
-            <h3><strong>GitHub:</strong> <a href="https://github.com/RMSchrader1994/"> RMSchrader1994</a></h3>
-            <br />
-            <h3><strong>Twitter: </strong><a href="https://twitter.com/schrader_may">@schrader_may</a></h3>
-            <br />
-            <h3><strong>Seelio:</strong> <a href="https://seelio.com/schrader1994"> schrader1994</a></h3>
-            <br />
-        </div>
-    </div>
 </body>
 </html>
