--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h3>Websites</h3>
             </div>
             <div class= "col-sm-4">
-            <a href="#"><i style="font-size:75px" class="fa fa-film"></i></a>
+            <a href="HTML/videos.html"><i style="font-size:75px" class="fa fa-film"></i></a>
             <h3>Videos</h3>
             </div>
             <div class= "col-sm-4">
