--- a/HTML/skills.html
+++ b/HTML/skills.html
@@ -23,7 +23,7 @@
         <ul id="myMenu" class="nav navbar-right collapse navbar-collapse nav-pills nav-justified">
             <li><a href="../index.html"><i style="font-size:35px" class="fa fa-home"><br /></i></a></li>
             <li><a href="../HTML/websites.html"><i style="font-size:35px" class="fa fa-mouse-pointer"><br /></i></a></li>
-            <li><a href="#"><i style="font-size:35px" class="fa fa-film"><br /></i></a></li>
+            <li><a href="../HTML/videos.html"><i style="font-size:35px" class="fa fa-film"><br /></i></a></li>
             <li><a href="../HTML/personal.html"><i style="font-size:35px" class="fa fa-user"><br /></i></a></li>
             <li><a href="../HTML/skills.html"><i style="font-size:35px" class="fa fa-wrench"><br /></i></a></li>
             <li><a href="../HTML/contact.html"><i style="font-size:35px" class="fa fa-phone"><br /></i></a></li>
