Video Page Content

--- a/HTML/videos.html
+++ b/HTML/videos.html
@@ -4,7 +4,7 @@
      <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Contact Info</title>
+        <title>Videos</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="../CSS/videos.css" type="text/css" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -29,5 +29,83 @@
             <li><a href="../HTML/contact.html"><i style="font-size:35px" class="fa fa-phone"><br /></i></a></li>
         </ul>
     </nav>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-5">
+                <h1>Hello, Goodbye</h1>
+                <h3>Sept - Dec 2016</h3>
+                <p>As a senior at Salisbury University, one of my many courses was Digital Film Making. One of the group projects assigned was a full-length feature presentation. During the project, I was one of 2 editors who pieced together and created the almost 40-minute film.</p>
+                <h5>Avid | Video Editing | Digital Film Making | Salisbury University</h5>
+            </div>
+            <div class="col-md-7">
+                <div class="rect">Scene 1</div>
+                <div class="rect">Scene 2</div>
+                <div class="rect">Scene 3</div>
+                <div class="rect">Scene 4</div>
+                <div class="rect">Scene 5</div>
+                <div class="rect">Scene 6</div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-5">
+                <h1>Hamilton: The Forgotten Founding Father</h1>
+                <h3>Jan - May 2016</h3>
+                <p>As a Junior at Salisbury University, one of my many courses was Documentary Making. The course focused on creating a full-length documentary on any subject. During the course, I created 30 minute documentary on the Broadway Musical "Hamilton". I worked individually to plan, film, edit, and render the final piece.</p>
+                <h5>Avid | Video Editing | Documentary Making | Salisbury University</h5>
+            </div>
+            <div class="col-md-7">
+                <div class="rect">Scene 1</div>
+                <div class="rect">Scene 2</div>
+                <div class="rect">Scene 3</div>
+                <div class="rect">Scene 4</div>
+                <div class="rect">Scene 5</div>
+                <div class="rect">Scene 6</div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-5">
+                <h1>My Senior Dog: Reese</h1>
+                <h3>June 2018</h3>
+                <p>During the summer of 2017, the Old Friends Senior Dog Sanctuary began planning a documentary on senior dogs. The groups asked fans on Facebook to create short videos about the fans own senior dogs for the documentary.  I helped my mom create a short video about on our dog, Reese, who sadly passed in early January of 2018.</p>
+                <h5>iMovie | Video Editing | Personal Video | Old Friends Senior Dog Sanctuary</h5>
+            </div>
+            <div class="col-md-7">
+                <div class="rect">Scene 1</div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-5">
+                <h1>Where's My Pencil</h1>
+                <h3>Jan - May 2015</h3>
+                <p>As a sophomore at Salisbury University, one of my many courses was Field Production. One of the group projects assigned was a creative video. All groups were given the same 3 line script. During the project, I helped plan, film, edit, and present the video. </p>
+                <h5>Avid | PowerPoint | Video Editing | Field Production | Salisbury University</h5>
+            </div>
+            <div class="col-md-7">
+                <div class="rect">Scene 1</div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-5">
+                <h1>A Miracle at Midnight</h1>
+                <h3>Sept - Dec 2014</h3>
+                <p>As a sophomore at Salisbury University, one of my many courses was TV/Studio Production. One of the group projects assigned was a talk show. During the project, I helped plan the show and, while filming, I was the floor manager.</p>
+                <h5>Live to Tape | TV/Studio Production | Salisbury University</h5>
+            </div>
+            <div class="col-md-7">
+                <div class="rect">Scene 1</div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-5">
+                <h1>IAPR Film Reel</h1>
+                <h3>Jan - Jun 2017</h3>
+                <p>During my final semester of Salisbury University, I completed a 6-month internship in Dublin, Ireland at the Irish Academy of Public Relations. While there I planned, filmed, edited, and published over 120 videos. All of which can be found on the academy's official YouTube page. This video contains a small collection of those videos.</p>
+                <h5>Sony Vegas | Video Editing | International Internship | Salisbury University | Irish Academy of PR</h5>
+            </div>
+            <div class="col-md-7">
+                <div class="rect">Scene 1</div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
