--- a/HTML/videos.html
+++ b/HTML/videos.html
@@ -38,72 +38,67 @@
                 <h5>Avid | Video Editing | Digital Film Making | Salisbury University</h5>
             </div>
             <div class="col-md-7">
-                <div class="rect">Scene 1</div>
-                <div class="rect">Scene 2</div>
-                <div class="rect">Scene 3</div>
-                <div class="rect">Scene 4</div>
-                <div class="rect">Scene 5</div>
-                <div class="rect">Scene 6</div>
+                <iframe src="https://drive.google.com/file/d/0ByEaRSVLu0KORWFrdHE3dVRocUk/preview" width="640" height="480"></iframe>
             </div>
         </div>
         <div class="row">
             <div class="col-md-5">
-                <h1>Hamilton: The Forgotten Founding Father</h1>
+                <h1>Hamilton: The Forgotten Founding Father<a href="https://seelio.com/schrader1994"> - Link</a></h1>
                 <h3>Jan - May 2016</h3>
                 <p>As a Junior at Salisbury University, one of my many courses was Documentary Making. The course focused on creating a full-length documentary on any subject. During the course, I created 30 minute documentary on the Broadway Musical "Hamilton". I worked individually to plan, film, edit, and render the final piece.</p>
                 <h5>Avid | Video Editing | Documentary Making | Salisbury University</h5>
             </div>
             <div class="col-md-7">
-                <div class="rect">Scene 1</div>
-                <div class="rect">Scene 2</div>
-                <div class="rect">Scene 3</div>
-                <div class="rect">Scene 4</div>
-                <div class="rect">Scene 5</div>
-                <div class="rect">Scene 6</div>
+                <img src="../Media/IMG/Hamilton1.png" alt="Hamilton1" class="Hamilton">
+                <img src="../Media/IMG/Hamilton2.png" alt="Hamilton2" class="Hamilton">
+                <img src="../Media/IMG/Hamilton3.png" alt="Hamilton3" class="Hamilton">
+                <img src="../Media/IMG/Hamilton4.png" alt="Hamilton4" class="Hamilton">
+                <img src="../Media/IMG/Hamilton5.png" alt="Hamilton5" class="Hamilton">
+                <img src="../Media/IMG/Hamilton6.png" alt="Hamilton6" class="Hamilton">
             </div>
         </div>
         <div class="row">
             <div class="col-md-5">
-                <h1>My Senior Dog: Reese</h1>
+                <h1>Senior Dog: Reese<a href="https://seelio.com/schrader1994"> - Link</a></h1>
                 <h3>June 2018</h3>
                 <p>During the summer of 2017, the Old Friends Senior Dog Sanctuary began planning a documentary on senior dogs. The groups asked fans on Facebook to create short videos about the fans own senior dogs for the documentary.  I helped my mom create a short video about on our dog, Reese, who sadly passed in early January of 2018.</p>
                 <h5>iMovie | Video Editing | Personal Video | Old Friends Senior Dog Sanctuary</h5>
             </div>
             <div class="col-md-7">
-                <div class="rect">Scene 1</div>
+                <img src="../Media/IMG/reese.jpg" alt="Reese Pup" class="cover">
             </div>
         </div>
         <div class="row">
             <div class="col-md-5">
-                <h1>Where's My Pencil</h1>
+                <h1>Where's My Pencil<a href="https://seelio.com/schrader1994"> - Link</a></h1>
                 <h3>Jan - May 2015</h3>
                 <p>As a sophomore at Salisbury University, one of my many courses was Field Production. One of the group projects assigned was a creative video. All groups were given the same 3 line script. During the project, I helped plan, film, edit, and present the video. </p>
                 <h5>Avid | PowerPoint | Video Editing | Field Production | Salisbury University</h5>
             </div>
             <div class="col-md-7">
-                <div class="rect">Scene 1</div>
+                <img src="../Media/IMG/Pencil.png" alt="Pencil" class="cover">
             </div>
         </div>
         <div class="row">
             <div class="col-md-5">
-                <h1>A Miracle at Midnight</h1>
+                <h1>A Miracle at Midnight<a href="https://seelio.com/schrader1994"> - Link</a></h1>
                 <h3>Sept - Dec 2014</h3>
                 <p>As a sophomore at Salisbury University, one of my many courses was TV/Studio Production. One of the group projects assigned was a talk show. During the project, I helped plan the show and, while filming, I was the floor manager.</p>
                 <h5>Live to Tape | TV/Studio Production | Salisbury University</h5>
             </div>
             <div class="col-md-7">
-                <div class="rect">Scene 1</div>
+                <img src="../Media/IMG/AMAM.png" alt="A Miracle at Midnight" class="cover">
             </div>
         </div>
         <div class="row">
             <div class="col-md-5">
-                <h1>IAPR Film Reel</h1>
+                <h1>IAPR Film Reel<a href="https://seelio.com/schrader1994"> - Link</a></h1>
                 <h3>Jan - Jun 2017</h3>
                 <p>During my final semester of Salisbury University, I completed a 6-month internship in Dublin, Ireland at the Irish Academy of Public Relations. While there I planned, filmed, edited, and published over 120 videos. All of which can be found on the academy's official YouTube page. This video contains a small collection of those videos.</p>
                 <h5>Sony Vegas | Video Editing | International Internship | Salisbury University | Irish Academy of PR</h5>
             </div>
             <div class="col-md-7">
-                <div class="rect">Scene 1</div>
+                <img src="../Media/IMG/IAPR.png" alt="IAPR" class="cover">
             </div>
         </div>
     </div>
