--- a/HTML/websites.html
+++ b/HTML/websites.html
@@ -38,11 +38,11 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-3 col-sm-offset-4">
-                    <a href="https://github.com/RMSchrader1994/Stream1_Porject" target="_blank"><img src="../Media/IMG/GitHub-Mark-Light-120px-plus.png" alt="GitHub"></a>
+                <div class="col-sm-3 col-sm-offset-3">
+                    <a href="https://github.com/RMSchrader1994/Stream1_Porject" target="_blank"><img src="../Media/IMG/GitHub-Mark-Light-120px-plus.png" alt="GitHub"><h4>GitHub Link</h4></a>
                     </div>
                     <div class="col-sm-3">
-                    <a href="https://rmschrader1994.github.io/Stream1_Porject/" target="_blank"><img src="../Media/IMG/GK.jpg" alt="Talisman">
+                    <a href="https://rmschrader1994.github.io/Stream1_Porject/" target="_blank"><img src="../Media/IMG/GK.jpg" alt="Talisman"><h4>Site Link</h4>
                     </a>
                 </div>
             </div>
@@ -55,11 +55,11 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-3 col-sm-offset-4">
-                    <a href="https://github.com/RMSchrader1994/project2" target="_blank"><img src="../Media/IMG/GitHub-Mark-Light-120px-plus.png" alt="GitHub"></a>
+                <div class="col-sm-3 col-sm-offset-3">
+                    <a href="https://github.com/RMSchrader1994/project2" target="_blank"><img src="../Media/IMG/GitHub-Mark-Light-120px-plus.png" alt="GitHub"><h4>GitHub Link</h4></a>
                     </div>
                     <div class="col-sm-3">
-                    <a href="https://dragonagequests.herokuapp.com/" target="_blank"><img src="../Media/IMG/DAI.png" alt="Inquisition">
+                    <a href="https://dragonagequests.herokuapp.com/" target="_blank"><img src="../Media/IMG/DAI.png" alt="Inquisition"><h4>Site Link</h4>
                     </a>
                 </div>
             </div>
@@ -72,12 +72,12 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-3 col-sm-offset-4">
-                    <a href="https://github.com/RMSchrader1994/project3" target="_blank"><img src="../Media/IMG/GitHub-Mark-Light-120px-plus.png" alt="GitHub"></a>
+                <div class="col-sm-3 col-sm-offset-3">
+                    <a href="https://github.com/RMSchrader1994/project3" target="_blank"><img src="../Media/IMG/GitHub-Mark-Light-120px-plus.png" alt="GitHub"><h4>GitHub Link</h4></a>
                     </div>
                     <div class="col-sm-3">
                     <a href="https://becca-elderscrollsonline.herokuapp.com/" target="_blank"><img src="../Media/IMG/elder-scrolls-online_logo.jpg" alt="ESO">
-                    </a>
+                    <h4>Site Link</h4></a>
                 </div>
             </div>
         </section>
