--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -39,6 +39,8 @@
             <br />
             <h3><strong>Mobile:</strong> 0838722970</h3>
             <br />
+            <h3><strong>Location:</strong> Dublin, Ireland</h3>
+            <br />
         </div>
         <div class="col-md-2"></div>
         <div class="col-md-5">
@@ -49,6 +51,8 @@
             <h3><strong>Twitter: </strong><a href="https://twitter.com/schrader_may">@schrader_may</a></h3>
             <br />
             <h3><strong>Seelio:</strong> <a href="https://seelio.com/schrader1994"> schrader1994</a></h3>
+            <br />
+            <h3><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/rebecca-schrader-076731109/"> Rebecca Schrader</a></h3>
             <br />
         </div>
     </div>
