--- a/HTML/websites.html
+++ b/HTML/websites.html
@@ -81,6 +81,20 @@
                 </div>
             </div>
         </section>
+        <section>
+            <div class = "row">
+                <div class = "col-sm-12">
+                    <h1> JavaScript Math Game</h1>
+                    <h3 class="languages">CSS | HTML | JS | Bootstrap | JQuery | GitHub</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4 col-sm-offset-4">
+                    <a href="../HTML/mathgame.html" target="_blank"><img src="../Media/IMG/Javascript.png" alt="JavaScript">
+                    <h4>Game Link</h4></a>
+                </div>
+            </div>
+        </section>
     </div> 
 </body>
 </html>
