DA added to port

--- a/HTML/websites.html
+++ b/HTML/websites.html
@@ -30,6 +30,20 @@
         </ul>
     </nav>
     <div class="container">
+       <section>
+            <div class = "row">
+                <div class = "col-sm-12">
+                    <h1> Which Dragon Age Companion is your favorite?</h1>
+                    <h3 class="languages">CSS | HTML | JS | Bootstrap | JQuery | GitHub</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4 col-sm-offset-4">
+                    <a href="../HTML/dragon_age.html" target="_blank"><img src="../Media/IMG/Javascript.png" alt="JavaScript">
+                    <h4>Game Link</h4></a>
+                </div>
+            </div>
+        </section>
         <section>
             <div class = "row">
                 <div class = "col-sm-12">
