--- a/HTML/websites.html
+++ b/HTML/websites.html
@@ -30,17 +30,20 @@
         </ul>
     </nav>
     <div class="container">
-       <section>
+        <section>
             <div class = "row">
                 <div class = "col-sm-12">
-                    <h1> Which Dragon Age Companion is your favorite?</h1>
+                    <h1> Who is your favorite Dragon Age Companion?</h1>
                     <h3 class="languages">CSS | HTML | JS | Bootstrap | JQuery | GitHub</h3>
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4 col-sm-offset-4">
-                    <a href="../HTML/dragon_age.html" target="_blank"><img src="../Media/IMG/Javascript.png" alt="JavaScript">
-                    <h4>Game Link</h4></a>
+                <div class="col-sm-3 col-sm-offset-3">
+                    <a href="../HTML/dragon_age_creative.html" target="_blank"><img src="../Media/IMG/Javascript.png" alt="JavaScript"><h4>Creative Design</h4></a>
+                    </div>
+                    <div class="col-sm-3">
+                    <a href="../HTML/dragon_age_professional.html" target="_blank"><img src="../Media/IMG/Javascript.png" alt="JavaScript"><h4>Professional Design</h4>
+                    </a>
                 </div>
             </div>
         </section>
