--- a/HTML/dragon_age_creative.html
+++ b/HTML/dragon_age_creative.html
@@ -8,13 +8,15 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
     </head>
     <body>
         <div class="container">
             
             <div class="row">
                 <div class="col-sm-12">
-                  <h2>Who is you favorite companion?</h2>
+                  <h2>Who is you favorite companion? <input id="toggle-one" checked type="checkbox" data-on="Creative" data-off="Professional"></h2>
                 </div>
               </div>
 <!--            Origin-->
@@ -329,6 +331,10 @@
                 if (document.forms.inquisition.specialization.value == 'Necromancer') {
                     alert("Dorian")}
             }
+            
+             $(function() {
+    $('#toggle-one').bootstrapToggle();
+  })
         </script>
     </body>
 </html>
