--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -50,7 +50,7 @@
             <br />
             <h3><strong>Twitter: </strong><a href="https://twitter.com/schrader_may">@schrader_may</a></h3>
             <br />
-            <h3><strong>Seelio:</strong> <a href="https://seelio.com/schrader1994"> schrader1994</a></h3>
+            <h3><strong>Behance:</strong> <a href="https://www.behance.net/rebeccaschrader"> rebeccaschrader</a></h3>
             <br />
             <h3><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/rebecca-schrader-076731109/"> Rebecca Schrader</a></h3>
             <br />
