--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <h3>Skills</h3>
             </div>
             <div class= "col-sm-4">
-            <a href="Media/Files/SchraderResume.pdf" download><i style="font-size:75px" class="fa fa-download"></i></a>
+            <a href="Media/Files/Schrader Resume1.pdf" download><i style="font-size:75px" class="fa fa-download"></i></a>
             <h3>Resume</h3>
             </div>
             <div class= "col-sm-4">
