--- a/HTML/personal.html
+++ b/HTML/personal.html
@@ -31,9 +31,14 @@
     </nav>
 <section class="timeline">
   <ul>
+   <li>
+      <div>
+        <h2>Mar, 2019 - present</h2> Accommadation Assistant at theKey Collection
+      </div>
+    </li>
     <li>
       <div>
-        <h2>Apr, 2018 - present</h2> Finishing up my final projects for the course and currently searching for my dream job!
+        <h2>Apr, 2018</h2> Finished my final projects for the course.
       </div>
     </li>
     <li>
