--- a/HTML/websites.html
+++ b/HTML/websites.html
@@ -76,7 +76,7 @@
                     <a href="https://github.com/RMSchrader1994/project2" target="_blank"><img src="../Media/IMG/GitHub-Mark-Light-120px-plus.png" alt="GitHub"><h4>GitHub Link</h4></a>
                     </div>
                     <div class="col-sm-3">
-                    <a href="https://dragonagequests.herokuapp.com/" target="_blank"><img src="../Media/IMG/DAI.png" alt="Inquisition"><h4>Site Link</h4>
+                    <a href="https://dragonagequests.herokuapp.com/" target="_blank"><img src="../Media/IMG/Dragon%20Age%20Stuff/DAI.png" alt="Inquisition"><h4>Site Link</h4>
                     </a>
                 </div>
             </div>
