--- a/HTML/dragon_age_professional.html
+++ b/HTML/dragon_age_professional.html
@@ -14,7 +14,7 @@
             
             <div class="row">
                 <div class="col-sm-12">
-                  <h2>Who is you favorite companion?</h2>
+                  <h2>Who is your favorite companion?</h2>
                 </div>
               </div>
 <!--            Origin-->
