--- a/HTML/personal.html
+++ b/HTML/personal.html
@@ -33,7 +33,7 @@
   <ul>
    <li>
       <div>
-        <h2>Mar, 2019 - present</h2> Accommadation Assistant at theKey Collection
+        <h2>Mar, 2019 - present</h2> Accommodation Assistant at theKey Collection
       </div>
     </li>
     <li>
